--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Path to 90</title>
+  <title>Grades Projection</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
